# eggdrop

./: .gitignore  AUTHORS  CONTENTS  FEATURES  INSTALL  Makefile.in  NEWS  README  THANKS  UPGRADING  aclocal.m4  config.h.in  configure  configure.ac  disabled_modules  eggdrop-basic.conf  eggdrop-basic.toml  eggdrop-libera-perf.toml  eggdrop-test.conf  eggdrop-test.toml  eggdrop.conf  eggdrop.toml  meson.build  meson_options.txt  perf_analyze.sh  test_noweb.toml
.github/workflows/: ci.yml  codeql.yml  dependencies.yml  make.yml
cross/: aarch64-apple-darwin.ini  aarch64-linux-gnu.ini
doc/: ABOUT  ACCOUNTS  BANS  BOTNET  BUG-REPORT  COMPILE-GUIDE  CONTENTS  Changes1.10  DESIGN.md  FIRST-SCRIPT  IPV6  IRCv3  Makefile.in  PARTYLINE  PATCH-HOWTO  PBKDF2  TLS  TRICKS  USERS  Versions  core.settings  tcl-commands.doc  twitch-tcl-commands.doc
doc/html/: index.html  objects.inv  search.html  searchindex.js
doc/html/_static/: basic.css  documentation_options.js
doc/html/about/: about.html  legal.html
doc/man1/: eggdrop.1
doc/modules/: MODULES  mod.assoc  mod.blowfish  mod.channels  mod.compress  mod.console  mod.ctcp  mod.dns  mod.filesys  mod.ident  mod.irc  mod.notes  mod.pbkdf2  mod.python  mod.seen  mod.server  mod.share  mod.transfer  mod.twitch  mod.uptime  mod.webui  mod.woobie  writing-modules
doc/settings/: CONTENTS  core.settings  mod.assoc  mod.blowfish  mod.channels  mod.compress  mod.console  mod.ctcp  mod.dns  mod.filesys  mod.ident  mod.irc  mod.notes  mod.seen  mod.server  mod.share  mod.transfer  mod.uptime  mod.webui  mod.woobie
doc/sphinx_source/: conf.py  index.rst
help/set/: cmds1.help
language/: core.danish.lang  core.english.lang  core.finnish.lang  core.french.lang  core.german.lang  core.italian.lang  core.portuguese.lang
libop/: .meson-subproject-wrap-hash.txt  README.md
libop/include/: commio-int.h  commio-ssl.h  event-int.h  libop_config.h.meson  meson.build  op_async.h  op_async_log.h  op_atomic.h  op_balloc.h  op_c23.h  op_cidr_tbl.h  op_commio.h  op_coro.h  op_event.h  op_helper.h  op_hostmask.h  op_lib.h  op_linebuf.h  op_lock.h  op_memory.h  op_mpmc.h  op_msgbuf.h  op_ratelimit.h  op_regex.h  op_seccomp.h  op_sendbuf.h  op_shm_ring.h  op_strbuf.h  op_subst.h  op_thread.h  op_thread_pool.h  op_tools.h
libop/src/: async.c  async_log.c  balloc.c  cidr_tbl.c  commio.c  coro.c  epoll.c  event.c  export-syms.txt  helper.c  hostmask.c  io_uring.c  kqueue.c  linebuf.c  meson.build  msgbuf.c  op_atomic.c  op_lib.c  op_lib_stub.c  op_memory.c  op_memory_ext.c  opssl_backend.c  poll.c  ports.c  rawbuf.c  regex.c  seccomp.c  select.c  sendbuf.c  shm_ring.c  sigio.c  strbuf.c  subst.c  thread_pool.c  toml.c  tools.c  unix.c  websocket.c  wolfssl.c
libop/src/lmdb/: lmdb.h  mdb.c  midl.h
libop/tests/: meson.build  test_event_pool.c  test_futex_park.c  test_mpmc.c  test_uring.c
logs/: CONTENTS
m4/: python.m4  tcl.m4
misc/: genchanges  generatedocs  getcommit  killwhitespace  makedepend  modconfig  newversion  post_install.py  releaseprep  runautotools  setpatch  updatecopyright
scripts/: CONTENTS  Makefile.in  action.fix.tcl  autobotchk  botchk  compat.tcl  conf2toml.py  eggtools.py  perf_track.tcl  ques5.tcl  test_conf2toml.py
src/: async_dns.c  async_dns.h  async_fileio.c  async_fileio.h  async_log.c  async_log.h  async_recv.c  async_recv.h  bg.c  bg.h  botcmd.c  botmsg.c  botnet.c  chan.h  chanprog.c  cmds.c  cmdt.h  comqueue.c  comqueue.h  configtoml.c  configtoml.h  dcc.c  dccutil.c  dictionary.c  dictionary.h  dns.c  dns.h  egg_commio.c  egg_commio.h  egg_perf_types.h  egg_store.c  egg_store.h  egg_store_flat.c  egg_store_lmdb.c  egg_tls.h  eggdrop.h  flags.c  flags.h  io_thread.c  io_thread.h  (+46 more)
src/compat/: arc4random.c  balloc.c  balloc.h  base64.c  base64.h  compat.h  egg_dictionary.h  explicit_bzero.c  explicit_bzero.h  in6.h  inet_aton.c  inet_aton.h  mbuf.c  mbuf.h  snprintf.c  snprintf.h  strlcpy.c  strlcpy.h
src/md5/: md5.h  md5c.c
src/mod/: Makefile.in  module.h  modvals.h
src/mod/assoc.mod/: assoc.c  assoc.h
src/mod/blowfish.mod/: bf_tab.h  blowfish.c  blowfish.h
src/mod/channels.mod/: chancfg.c  channels.c  channels.h  cmdschan.c  tclchan.c  udefchan.c  userchan.c
src/mod/compress.mod/: compress.c  compress.h  configure  configure.ac  tclcompress.c
src/mod/console.mod/: console.c  console.h
src/mod/ctcp.mod/: ctcp.c  ctcp.h
src/mod/dns.mod/: configure  configure.ac  coredns.c  dns.c  dns.h  res.c  res.h
src/mod/filesys.mod/: dbcompat.c  dbcompat.h  filedb3.c  filedb3.h  filelist.c  filelist.h  files.c  files.h  filesys.c  filesys.h  tclfiles.c
src/mod/ident.mod/: ident.c
src/mod/irc.mod/: chan.c  chan_enforce.c  chan_handlers.c  cmdsirc.c  irc.c  irc.h  mode.c  msgcmds.c  tclirc.c
src/mod/msgcounter.mod/: modinfo  msgcounter.c  msgcounter.h
src/mod/notes.mod/: cmdsnote.c  notes.c  notes.h
src/mod/pbkdf2.mod/: pbkdf2.c  tclpbkdf2.c
src/mod/python.mod/: configure  configure.ac  pycmds.c  python.c  python.h  tclpython.c
src/mod/python.mod/scripts/: greet.py
src/mod/seen.mod/: seen.c
src/mod/server.mod/: cmdsserv.c  isupport.c  sasl.c  server.c  server.h  servmsg.c  tclisupport.c  tclserv.c
src/mod/server.mod/help/set/: server.help
src/mod/share.mod/: share.c  share.h  uf_features.c
src/mod/transfer.mod/: tcltransfer.c  transfer.c  transfer.h  transferfstat.c  transferqueue.c
src/mod/twitch.mod/: twitch.c  twitch.h
src/mod/uptime.mod/: Makefile  uptime.c  uptime.h
src/mod/webui.mod/: Makefile  index.html  webui.c
src/mod/woobie.mod/: woobie.c
subprojects/: libop  opssl.wrap
subprojects/opssl/: README.md  meson.build
subprojects/opssl/tests/: meson.build  test_aead.c  test_crypto.c  test_helpers.h  test_kdf.c  test_mlkem_debug.c  test_mlkem_kat.c  test_pq_hybrid.c  test_session_resume.c  test_tls.c  test_tls13_handshake.c  test_x509_chain.c
tests/: meson.build  test_botmsg.c  test_flags.c  test_harness.h  test_lmdb_recovery.c  test_lmdb_roundtrip.c  test_match.c  test_misc.c  test_net.c  test_notes.c  test_rfc1459.c  test_strbuf.c
text/: CONTENTS  banner
(+173 files in other folders)
